WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34890
Chromium: Web Inspector on an element in a page where JS is blocked crashes the renderer
https://bugs.webkit.org/show_bug.cgi?id=34890
Summary
Chromium: Web Inspector on an element in a page where JS is blocked crashes t...
Pavel Feldman
Reported
2010-02-12 06:58:50 PST
This is a nasty crasher.
Attachments
patch
(2.97 KB, patch)
2010-02-12 07:11 PST
,
Yury Semikhatsky
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yury Semikhatsky
Comment 1
2010-02-12 07:11:05 PST
Created
attachment 48643
[details]
patch
WebKit Commit Bot
Comment 2
2010-02-12 07:38:43 PST
Comment on
attachment 48643
[details]
patch Clearing flags on attachment: 48643 Committed
r54725
: <
http://trac.webkit.org/changeset/54725
>
WebKit Commit Bot
Comment 3
2010-02-12 07:38:51 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug