2010-02-12  Yury Semikhatsky  <yurys@chromium.org>

Reviewed by Pavel Feldman.

        Chromium: Web Inspector on an element in a page where JS is blocked crashes the renderer

        https://bugs.webkit.org/show_bug.cgi?id=34890

        * src/DebuggerAgentImpl.cpp:
        (WebKit::DebuggerAgentImpl::createUtilityContext):

Canonical link: https://commits.webkit.org/46035@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54725 268f45cc-cd09-0410-ab3c-d52691b4dbfc