WebKit/chromium/src/DebuggerAgentImpl.cpp
@@ -95,13 +95,21 @@ void DebuggerAgentImpl::debuggerOutput(const String& command)
 void DebuggerAgentImpl::createUtilityContext(Frame* frame, v8::Persistent<v8::Context>* context)
 {
     v8::HandleScope scope;
+    bool canExecuteScripts = frame->script()->canExecuteScripts();
 
     // Set up the DOM window as the prototype of the new global object.
     v8::Handle<v8::Context> windowContext = V8Proxy::context(frame);
-    v8::Handle<v8::Object> windowGlobal = windowContext->Global();
-    v8::Handle<v8::Object> windowWrapper = V8DOMWrapper::lookupDOMWrapper(V8DOMWindow::GetTemplate(), windowGlobal);
-
-    ASSERT(V8DOMWindow::toNative(windowWrapper) == frame->domWindow());
+    v8::Handle<v8::Object> windowGlobal;
+    v8::Handle<v8::Object> windowWrapper;
+    if (canExecuteScripts) {
+        // FIXME: This check prevents renderer from crashing, while providing limited capabilities for
+        // DOM inspection, Resources tracking, no scripts support, some timeline profiling. Console will
+        // result in exceptions for each evaluation. There is still some work that needs to be done in
+        // order to polish the script-less experience.
+        windowGlobal = windowContext->Global();
+        windowWrapper = V8DOMWrapper::lookupDOMWrapper(V8DOMWindow::GetTemplate(), windowGlobal);
+        ASSERT(V8DOMWindow::toNative(windowWrapper) == frame->domWindow());
+    }
 
     v8::Handle<v8::ObjectTemplate> globalTemplate = v8::ObjectTemplate::New();
 
@@ -126,11 +134,13 @@ void DebuggerAgentImpl::createUtilityContext(Frame* frame, v8::Persistent<v8::Co
     v8::Handle<v8::Object> global = (*context)->Global();
 
     v8::Handle<v8::String> implicitProtoString = v8::String::New("__proto__");
-    global->Set(implicitProtoString, windowWrapper);
+    if (canExecuteScripts)
+        global->Set(implicitProtoString, windowWrapper);
 
     // Give the code running in the new context a way to get access to the
     // original context.
-    global->Set(v8::String::New("contentWindow"), windowGlobal);
+    if (canExecuteScripts)
+        global->Set(v8::String::New("contentWindow"), windowGlobal);
 }
 
 String DebuggerAgentImpl::executeUtilityFunction(
